<resources>
    <string name="app_name">Mobile Apps 1</string>
    <string name="hello_world">Hello World !</string>
    <string name="some_text">Hello Dorset !</string>
    <string name="new_text">test</string>
    <string name="Enter_you_name_here">Enter Your Name</string>
    <string name="new_text_2">test2</string>
    <string name="hello_world2">hello_world</string>
    <string name="my_text">my text</string>
</resources>